bad/incr_var_class.example_compiler_output
ERROR
[1mbad/incr_var_class.lat:7:3: [1;31merror: [0;1m++ operator is valid only for integer values not `Y`[m
	x++;
	 [1;32m^[m
